correct dark mode elements

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,14 +2,11 @@
 html,
 body,
 #app {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  --at-apply: bg-light .dark:bg-dark h100% m0 p0;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 html.dark {
-  background: #121212;
   color-scheme: dark;
 }
 
@@ -47,4 +44,31 @@ button {
     transition: none !important;
     animation: none !important;
   } */
+}
+
+p {
+  line-height: 1.2em;
+}
+
+b {
+  font-weight: bold;
+}
+
+h1 {
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: x-large;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: large;
+  font-weight: bold;
+}
+
+h4 {
+  font-weight: bold;
 }
