--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -8,33 +8,6 @@
   --at-apply: fixed -translate-x-2/4 -translate-y-2/4 left-2/4 top-2/4;
 }
 
-p {
-  line-height: 1.2em;
-}
-
-b {
-  font-weight: bold;
-}
-
-h1 {
-  font-size: xx-large;
-  font-weight: bold;
-}
-
-h2 {
-  font-size: x-large;
-  font-weight: bold;
-}
-
-h3 {
-  font-size: large;
-  font-weight: bold;
-}
-
-h4 {
-  font-weight: bold;
-}
-
 button>* {
   pointer-events: none;
   user-select: none;
